...
        PagedDataList(
          key: _pagedListKey,
          onRefreshCallbackSet: (callback) {
            _refreshCallback = callback;
          },
          noItemsFoundText: _receiptListModel.hasActiveFilter
              ? "No receipts match this filter"
              : "No receipts found",
          listItemBuilder: (context, receipt, index) {
            return ReceiptListItem(
                receipt: receipt.anyOf.values[0] as api.Receipt);
          },
          getPagedDataFuture: (pageKey) {
...
